// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`enemyStats > 敌人曲线快照（1~5 章基准数值） 1`] = `
[
  {
    "atk": 155,
    "chapter": 1,
    "def": 12,
    "hp": 620,
  },
  {
    "atk": 199,
    "chapter": 2,
    "def": 14,
    "hp": 843,
  },
  {
    "atk": 257,
    "chapter": 3,
    "def": 17,
    "hp": 1146,
  },
  {
    "atk": 332,
    "chapter": 4,
    "def": 21,
    "hp": 1559,
  },
  {
    "atk": 429,
    "chapter": 5,
    "def": 26,
    "hp": 2121,
  },
]
`;

exports[`petAtk > 成长曲线快照（全宠物 Lv1/10/30/50 攻击一览） 1`] = `
[
  {
    "id": "pet_001",
    "lv1": 40,
    "lv10": 52,
    "lv30": 96,
    "lv50max": 482,
  },
  {
    "id": "pet_002",
    "lv1": 92,
    "lv10": 127,
    "lv30": 258,
    "lv50max": 1442,
  },
  {
    "id": "pet_003",
    "lv1": 53,
    "lv10": 72,
    "lv30": 147,
    "lv50max": 824,
  },
  {
    "id": "pet_004",
    "lv1": 40,
    "lv10": 53,
    "lv30": 96,
    "lv50max": 467,
  },
  {
    "id": "pet_005",
    "lv1": 40,
    "lv10": 52,
    "lv30": 96,
    "lv50max": 482,
  },
  {
    "id": "pet_006",
    "lv1": 92,
    "lv10": 127,
    "lv30": 258,
    "lv50max": 1442,
  },
  {
    "id": "pet_007",
    "lv1": 53,
    "lv10": 72,
    "lv30": 147,
    "lv50max": 824,
  },
  {
    "id": "pet_008",
    "lv1": 92,
    "lv10": 127,
    "lv30": 258,
    "lv50max": 1442,
  },
  {
    "id": "pet_009",
    "lv1": 37,
    "lv10": 48,
    "lv30": 87,
    "lv50max": 423,
  },
  {
    "id": "pet_010",
    "lv1": 49,
    "lv10": 64,
    "lv30": 116,
    "lv50max": 564,
  },
  {
    "id": "pet_011",
    "lv1": 76,
    "lv10": 105,
    "lv30": 214,
    "lv50max": 1195,
  },
  {
    "id": "pet_012",
    "lv1": 48,
    "lv10": 63,
    "lv30": 116,
    "lv50max": 578,
  },
  {
    "id": "pet_013",
    "lv1": 92,
    "lv10": 127,
    "lv30": 258,
    "lv50max": 1442,
  },
  {
    "id": "pet_014",
    "lv1": 58,
    "lv10": 76,
    "lv30": 140,
    "lv50max": 698,
  },
  {
    "id": "pet_015",
    "lv1": 34,
    "lv10": 44,
    "lv30": 80,
    "lv50max": 389,
  },
  {
    "id": "pet_016",
    "lv1": 76,
    "lv10": 105,
    "lv30": 214,
    "lv50max": 1195,
  },
  {
    "id": "pet_017",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_018",
    "lv1": 59,
    "lv10": 77,
    "lv30": 140,
    "lv50max": 681,
  },
  {
    "id": "pet_019",
    "lv1": 37,
    "lv10": 48,
    "lv30": 87,
    "lv50max": 423,
  },
  {
    "id": "pet_020",
    "lv1": 58,
    "lv10": 76,
    "lv30": 140,
    "lv50max": 698,
  },
  {
    "id": "pet_021",
    "lv1": 48,
    "lv10": 63,
    "lv30": 116,
    "lv50max": 578,
  },
  {
    "id": "pet_022",
    "lv1": 92,
    "lv10": 127,
    "lv30": 258,
    "lv50max": 1442,
  },
  {
    "id": "pet_023",
    "lv1": 76,
    "lv10": 105,
    "lv30": 214,
    "lv50max": 1195,
  },
  {
    "id": "pet_024",
    "lv1": 53,
    "lv10": 72,
    "lv30": 147,
    "lv50max": 824,
  },
  {
    "id": "pet_025",
    "lv1": 58,
    "lv10": 76,
    "lv30": 140,
    "lv50max": 698,
  },
  {
    "id": "pet_026",
    "lv1": 92,
    "lv10": 127,
    "lv30": 258,
    "lv50max": 1442,
  },
  {
    "id": "pet_027",
    "lv1": 37,
    "lv10": 48,
    "lv30": 87,
    "lv50max": 423,
  },
  {
    "id": "pet_028",
    "lv1": 53,
    "lv10": 70,
    "lv30": 126,
    "lv50max": 614,
  },
  {
    "id": "pet_029",
    "lv1": 58,
    "lv10": 76,
    "lv30": 140,
    "lv50max": 698,
  },
  {
    "id": "pet_030",
    "lv1": 64,
    "lv10": 84,
    "lv30": 152,
    "lv50max": 741,
  },
  {
    "id": "pet_031",
    "lv1": 53,
    "lv10": 72,
    "lv30": 147,
    "lv50max": 824,
  },
  {
    "id": "pet_032",
    "lv1": 34,
    "lv10": 44,
    "lv30": 80,
    "lv50max": 389,
  },
  {
    "id": "pet_033",
    "lv1": 37,
    "lv10": 48,
    "lv30": 87,
    "lv50max": 423,
  },
  {
    "id": "pet_034",
    "lv1": 40,
    "lv10": 52,
    "lv30": 96,
    "lv50max": 482,
  },
  {
    "id": "pet_035",
    "lv1": 53,
    "lv10": 72,
    "lv30": 147,
    "lv50max": 824,
  },
  {
    "id": "pet_036",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_037",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_038",
    "lv1": 44,
    "lv10": 57,
    "lv30": 104,
    "lv50max": 508,
  },
  {
    "id": "pet_039",
    "lv1": 44,
    "lv10": 57,
    "lv30": 104,
    "lv50max": 508,
  },
  {
    "id": "pet_040",
    "lv1": 40,
    "lv10": 53,
    "lv30": 96,
    "lv50max": 467,
  },
  {
    "id": "pet_041",
    "lv1": 40,
    "lv10": 53,
    "lv30": 96,
    "lv50max": 467,
  },
  {
    "id": "pet_042",
    "lv1": 48,
    "lv10": 63,
    "lv30": 116,
    "lv50max": 578,
  },
  {
    "id": "pet_043",
    "lv1": 76,
    "lv10": 105,
    "lv30": 214,
    "lv50max": 1195,
  },
  {
    "id": "pet_044",
    "lv1": 53,
    "lv10": 70,
    "lv30": 126,
    "lv50max": 614,
  },
  {
    "id": "pet_045",
    "lv1": 53,
    "lv10": 72,
    "lv30": 147,
    "lv50max": 824,
  },
  {
    "id": "pet_046",
    "lv1": 53,
    "lv10": 72,
    "lv30": 147,
    "lv50max": 824,
  },
  {
    "id": "pet_047",
    "lv1": 37,
    "lv10": 48,
    "lv30": 87,
    "lv50max": 423,
  },
  {
    "id": "pet_048",
    "lv1": 40,
    "lv10": 52,
    "lv30": 96,
    "lv50max": 482,
  },
  {
    "id": "pet_049",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_050",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_051",
    "lv1": 44,
    "lv10": 57,
    "lv30": 104,
    "lv50max": 508,
  },
  {
    "id": "pet_052",
    "lv1": 44,
    "lv10": 57,
    "lv30": 104,
    "lv50max": 508,
  },
  {
    "id": "pet_053",
    "lv1": 48,
    "lv10": 63,
    "lv30": 116,
    "lv50max": 578,
  },
  {
    "id": "pet_054",
    "lv1": 48,
    "lv10": 63,
    "lv30": 116,
    "lv50max": 578,
  },
  {
    "id": "pet_055",
    "lv1": 76,
    "lv10": 105,
    "lv30": 214,
    "lv50max": 1195,
  },
  {
    "id": "pet_056",
    "lv1": 58,
    "lv10": 76,
    "lv30": 140,
    "lv50max": 698,
  },
  {
    "id": "pet_057",
    "lv1": 53,
    "lv10": 70,
    "lv30": 126,
    "lv50max": 614,
  },
  {
    "id": "pet_058",
    "lv1": 70,
    "lv10": 92,
    "lv30": 169,
    "lv50max": 843,
  },
  {
    "id": "pet_059",
    "lv1": 53,
    "lv10": 72,
    "lv30": 147,
    "lv50max": 824,
  },
  {
    "id": "pet_060",
    "lv1": 53,
    "lv10": 72,
    "lv30": 147,
    "lv50max": 824,
  },
  {
    "id": "pet_061",
    "lv1": 34,
    "lv10": 44,
    "lv30": 80,
    "lv50max": 389,
  },
  {
    "id": "pet_062",
    "lv1": 40,
    "lv10": 52,
    "lv30": 96,
    "lv50max": 482,
  },
  {
    "id": "pet_063",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_064",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_065",
    "lv1": 44,
    "lv10": 57,
    "lv30": 104,
    "lv50max": 508,
  },
  {
    "id": "pet_066",
    "lv1": 44,
    "lv10": 57,
    "lv30": 104,
    "lv50max": 508,
  },
  {
    "id": "pet_067",
    "lv1": 40,
    "lv10": 53,
    "lv30": 96,
    "lv50max": 467,
  },
  {
    "id": "pet_068",
    "lv1": 40,
    "lv10": 53,
    "lv30": 96,
    "lv50max": 467,
  },
  {
    "id": "pet_069",
    "lv1": 48,
    "lv10": 63,
    "lv30": 116,
    "lv50max": 578,
  },
  {
    "id": "pet_070",
    "lv1": 76,
    "lv10": 105,
    "lv30": 214,
    "lv50max": 1195,
  },
  {
    "id": "pet_071",
    "lv1": 53,
    "lv10": 70,
    "lv30": 126,
    "lv50max": 614,
  },
  {
    "id": "pet_072",
    "lv1": 53,
    "lv10": 72,
    "lv30": 147,
    "lv50max": 824,
  },
  {
    "id": "pet_073",
    "lv1": 34,
    "lv10": 44,
    "lv30": 80,
    "lv50max": 389,
  },
  {
    "id": "pet_074",
    "lv1": 37,
    "lv10": 48,
    "lv30": 87,
    "lv50max": 423,
  },
  {
    "id": "pet_075",
    "lv1": 40,
    "lv10": 52,
    "lv30": 96,
    "lv50max": 482,
  },
  {
    "id": "pet_076",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_077",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_078",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_079",
    "lv1": 44,
    "lv10": 57,
    "lv30": 104,
    "lv50max": 508,
  },
  {
    "id": "pet_080",
    "lv1": 44,
    "lv10": 57,
    "lv30": 104,
    "lv50max": 508,
  },
  {
    "id": "pet_081",
    "lv1": 40,
    "lv10": 53,
    "lv30": 96,
    "lv50max": 467,
  },
  {
    "id": "pet_082",
    "lv1": 40,
    "lv10": 53,
    "lv30": 96,
    "lv50max": 467,
  },
  {
    "id": "pet_083",
    "lv1": 48,
    "lv10": 63,
    "lv30": 116,
    "lv50max": 578,
  },
  {
    "id": "pet_084",
    "lv1": 58,
    "lv10": 76,
    "lv30": 140,
    "lv50max": 698,
  },
  {
    "id": "pet_085",
    "lv1": 58,
    "lv10": 76,
    "lv30": 140,
    "lv50max": 698,
  },
  {
    "id": "pet_086",
    "lv1": 53,
    "lv10": 70,
    "lv30": 126,
    "lv50max": 614,
  },
  {
    "id": "pet_087",
    "lv1": 53,
    "lv10": 72,
    "lv30": 147,
    "lv50max": 824,
  },
  {
    "id": "pet_088",
    "lv1": 53,
    "lv10": 72,
    "lv30": 147,
    "lv50max": 824,
  },
  {
    "id": "pet_089",
    "lv1": 34,
    "lv10": 44,
    "lv30": 80,
    "lv50max": 389,
  },
  {
    "id": "pet_090",
    "lv1": 40,
    "lv10": 52,
    "lv30": 96,
    "lv50max": 482,
  },
  {
    "id": "pet_091",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_092",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_093",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_094",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_095",
    "lv1": 63,
    "lv10": 87,
    "lv30": 177,
    "lv50max": 989,
  },
  {
    "id": "pet_096",
    "lv1": 48,
    "lv10": 63,
    "lv30": 116,
    "lv50max": 578,
  },
  {
    "id": "pet_097",
    "lv1": 48,
    "lv10": 63,
    "lv30": 116,
    "lv50max": 578,
  },
  {
    "id": "pet_098",
    "lv1": 40,
    "lv10": 53,
    "lv30": 96,
    "lv50max": 467,
  },
  {
    "id": "pet_099",
    "lv1": 76,
    "lv10": 105,
    "lv30": 214,
    "lv50max": 1195,
  },
  {
    "id": "pet_100",
    "lv1": 70,
    "lv10": 92,
    "lv30": 169,
    "lv50max": 843,
  },
]
`;

exports[`petHp / petRcv（三维模型） > 三维快照（全宠物 Lv1 三围一览） 1`] = `
[
  {
    "atk": 40,
    "hp": 210,
    "id": "pet_001",
    "rcv": 25,
    "role": "support",
    "skill": "pet_metal_def_break",
  },
  {
    "atk": 92,
    "hp": 323,
    "id": "pet_002",
    "rcv": 19,
    "role": "attacker",
    "skill": "pet_metal_multi_hit",
  },
  {
    "atk": 53,
    "hp": 185,
    "id": "pet_003",
    "rcv": 11,
    "role": "attacker",
    "skill": "pet_wood_multi_hit",
  },
  {
    "atk": 40,
    "hp": 228,
    "id": "pet_004",
    "rcv": 54,
    "role": "healer",
    "skill": "pet_wood_big_heal",
  },
  {
    "atk": 40,
    "hp": 210,
    "id": "pet_005",
    "rcv": 25,
    "role": "support",
    "skill": "pet_water_stun",
  },
  {
    "atk": 92,
    "hp": 323,
    "id": "pet_006",
    "rcv": 19,
    "role": "attacker",
    "skill": "pet_water_multi_hit",
  },
  {
    "atk": 53,
    "hp": 185,
    "id": "pet_007",
    "rcv": 11,
    "role": "attacker",
    "skill": "pet_fire_dot",
  },
  {
    "atk": 92,
    "hp": 323,
    "id": "pet_008",
    "rcv": 19,
    "role": "attacker",
    "skill": "pet_fire_dot_ur",
  },
  {
    "atk": 37,
    "hp": 290,
    "id": "pet_009",
    "rcv": 19,
    "role": "tank",
    "skill": "pet_earth_convert_row",
  },
  {
    "atk": 49,
    "hp": 275,
    "id": "pet_010",
    "rcv": 65,
    "role": "healer",
    "skill": "pet_earth_time",
  },
  {
    "atk": 76,
    "hp": 268,
    "id": "pet_011",
    "rcv": 15,
    "role": "attacker",
    "skill": "pet_golden_cleanse",
  },
  {
    "atk": 48,
    "hp": 252,
    "id": "pet_012",
    "rcv": 30,
    "role": "support",
    "skill": "pet_transmute_metal",
  },
  {
    "atk": 92,
    "hp": 323,
    "id": "pet_013",
    "rcv": 19,
    "role": "attacker",
    "skill": "pet_thunder_crit",
  },
  {
    "atk": 58,
    "hp": 304,
    "id": "pet_014",
    "rcv": 36,
    "role": "support",
    "skill": "pet_shadow_purify",
  },
  {
    "atk": 34,
    "hp": 190,
    "id": "pet_015",
    "rcv": 45,
    "role": "healer",
    "skill": "pet_wood_heal",
  },
  {
    "atk": 76,
    "hp": 268,
    "id": "pet_016",
    "rcv": 15,
    "role": "attacker",
    "skill": "pet_wood_volley",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_017",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_star_cross",
  },
  {
    "atk": 59,
    "hp": 332,
    "id": "pet_018",
    "rcv": 78,
    "role": "healer",
    "skill": "pet_chaos_haste",
  },
  {
    "atk": 37,
    "hp": 290,
    "id": "pet_019",
    "rcv": 19,
    "role": "tank",
    "skill": "pet_water_shield",
  },
  {
    "atk": 58,
    "hp": 304,
    "id": "pet_020",
    "rcv": 36,
    "role": "support",
    "skill": "pet_abyss_delay",
  },
  {
    "atk": 48,
    "hp": 252,
    "id": "pet_021",
    "rcv": 30,
    "role": "support",
    "skill": "pet_frost_guard",
  },
  {
    "atk": 92,
    "hp": 323,
    "id": "pet_022",
    "rcv": 19,
    "role": "attacker",
    "skill": "pet_water_pierce",
  },
  {
    "atk": 76,
    "hp": 268,
    "id": "pet_023",
    "rcv": 15,
    "role": "attacker",
    "skill": "pet_void_resonance",
  },
  {
    "atk": 53,
    "hp": 185,
    "id": "pet_024",
    "rcv": 11,
    "role": "attacker",
    "skill": "pet_fire_burst",
  },
  {
    "atk": 58,
    "hp": 304,
    "id": "pet_025",
    "rcv": 36,
    "role": "support",
    "skill": "pet_fire_boost",
  },
  {
    "atk": 92,
    "hp": 323,
    "id": "pet_026",
    "rcv": 19,
    "role": "attacker",
    "skill": "pet_skyfall_gravity",
  },
  {
    "atk": 37,
    "hp": 290,
    "id": "pet_027",
    "rcv": 19,
    "role": "tank",
    "skill": "pet_earth_shield",
  },
  {
    "atk": 53,
    "hp": 420,
    "id": "pet_028",
    "rcv": 27,
    "role": "tank",
    "skill": "pet_abyss_bulwark",
  },
  {
    "atk": 58,
    "hp": 304,
    "id": "pet_029",
    "rcv": 36,
    "role": "support",
    "skill": "pet_earth_heart_convert",
  },
  {
    "atk": 64,
    "hp": 507,
    "id": "pet_030",
    "rcv": 33,
    "role": "tank",
    "skill": "pet_rift_shield",
  },
  {
    "atk": 53,
    "hp": 185,
    "id": "pet_031",
    "rcv": 11,
    "role": "attacker",
    "skill": "pet_metal_nuke_r",
  },
  {
    "atk": 34,
    "hp": 190,
    "id": "pet_032",
    "rcv": 45,
    "role": "healer",
    "skill": "pet_metal_heal_r",
  },
  {
    "atk": 37,
    "hp": 290,
    "id": "pet_033",
    "rcv": 19,
    "role": "tank",
    "skill": "pet_metal_shield_r",
  },
  {
    "atk": 40,
    "hp": 210,
    "id": "pet_034",
    "rcv": 25,
    "role": "support",
    "skill": "pet_metal_convert_r",
  },
  {
    "atk": 53,
    "hp": 185,
    "id": "pet_035",
    "rcv": 11,
    "role": "attacker",
    "skill": "pet_metal_multi_hit_r",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_036",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_metal_team_nuke_sr",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_037",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_metal_dot_sr",
  },
  {
    "atk": 44,
    "hp": 348,
    "id": "pet_038",
    "rcv": 22,
    "role": "tank",
    "skill": "pet_metal_shield_sr",
  },
  {
    "atk": 44,
    "hp": 348,
    "id": "pet_039",
    "rcv": 22,
    "role": "tank",
    "skill": "pet_metal_delay_attack_sr",
  },
  {
    "atk": 40,
    "hp": 228,
    "id": "pet_040",
    "rcv": 54,
    "role": "healer",
    "skill": "pet_metal_heal_sr",
  },
  {
    "atk": 40,
    "hp": 228,
    "id": "pet_041",
    "rcv": 54,
    "role": "healer",
    "skill": "pet_metal_extra_time_sr",
  },
  {
    "atk": 48,
    "hp": 252,
    "id": "pet_042",
    "rcv": 30,
    "role": "support",
    "skill": "pet_metal_stun_sr",
  },
  {
    "atk": 76,
    "hp": 268,
    "id": "pet_043",
    "rcv": 15,
    "role": "attacker",
    "skill": "pet_sig_metal_ruin",
  },
  {
    "atk": 53,
    "hp": 420,
    "id": "pet_044",
    "rcv": 27,
    "role": "tank",
    "skill": "pet_sig_metal_bastion",
  },
  {
    "atk": 53,
    "hp": 185,
    "id": "pet_045",
    "rcv": 11,
    "role": "attacker",
    "skill": "pet_wood_nuke_r",
  },
  {
    "atk": 53,
    "hp": 185,
    "id": "pet_046",
    "rcv": 11,
    "role": "attacker",
    "skill": "pet_wood_dot_r",
  },
  {
    "atk": 37,
    "hp": 290,
    "id": "pet_047",
    "rcv": 19,
    "role": "tank",
    "skill": "pet_wood_shield_r",
  },
  {
    "atk": 40,
    "hp": 210,
    "id": "pet_048",
    "rcv": 25,
    "role": "support",
    "skill": "pet_wood_convert_r",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_049",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_wood_team_nuke_sr",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_050",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_wood_gravity_sr",
  },
  {
    "atk": 44,
    "hp": 348,
    "id": "pet_051",
    "rcv": 22,
    "role": "tank",
    "skill": "pet_wood_shield_sr",
  },
  {
    "atk": 44,
    "hp": 348,
    "id": "pet_052",
    "rcv": 22,
    "role": "tank",
    "skill": "pet_wood_delay_attack_sr",
  },
  {
    "atk": 48,
    "hp": 252,
    "id": "pet_053",
    "rcv": 30,
    "role": "support",
    "skill": "pet_wood_damage_buff_sr",
  },
  {
    "atk": 48,
    "hp": 252,
    "id": "pet_054",
    "rcv": 30,
    "role": "support",
    "skill": "pet_wood_element_buff_sr",
  },
  {
    "atk": 76,
    "hp": 268,
    "id": "pet_055",
    "rcv": 15,
    "role": "attacker",
    "skill": "pet_sig_wood_lance",
  },
  {
    "atk": 58,
    "hp": 304,
    "id": "pet_056",
    "rcv": 36,
    "role": "support",
    "skill": "pet_sig_wood_bloom",
  },
  {
    "atk": 53,
    "hp": 420,
    "id": "pet_057",
    "rcv": 27,
    "role": "tank",
    "skill": "pet_sig_wood_aegis",
  },
  {
    "atk": 70,
    "hp": 367,
    "id": "pet_058",
    "rcv": 43,
    "role": "support",
    "skill": "pet_sig_wood_worldtree",
  },
  {
    "atk": 53,
    "hp": 185,
    "id": "pet_059",
    "rcv": 11,
    "role": "attacker",
    "skill": "pet_water_nuke_r",
  },
  {
    "atk": 53,
    "hp": 185,
    "id": "pet_060",
    "rcv": 11,
    "role": "attacker",
    "skill": "pet_water_multi_hit_r",
  },
  {
    "atk": 34,
    "hp": 190,
    "id": "pet_061",
    "rcv": 45,
    "role": "healer",
    "skill": "pet_water_heal_r",
  },
  {
    "atk": 40,
    "hp": 210,
    "id": "pet_062",
    "rcv": 25,
    "role": "support",
    "skill": "pet_water_convert_r",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_063",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_water_team_nuke_sr",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_064",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_water_dot_sr",
  },
  {
    "atk": 44,
    "hp": 348,
    "id": "pet_065",
    "rcv": 22,
    "role": "tank",
    "skill": "pet_water_delay_attack_sr",
  },
  {
    "atk": 44,
    "hp": 348,
    "id": "pet_066",
    "rcv": 22,
    "role": "tank",
    "skill": "pet_water_stun_sr",
  },
  {
    "atk": 40,
    "hp": 228,
    "id": "pet_067",
    "rcv": 54,
    "role": "healer",
    "skill": "pet_water_extra_time_sr",
  },
  {
    "atk": 40,
    "hp": 228,
    "id": "pet_068",
    "rcv": 54,
    "role": "healer",
    "skill": "pet_water_heal_sr",
  },
  {
    "atk": 48,
    "hp": 252,
    "id": "pet_069",
    "rcv": 30,
    "role": "support",
    "skill": "pet_water_element_buff_sr",
  },
  {
    "atk": 76,
    "hp": 268,
    "id": "pet_070",
    "rcv": 15,
    "role": "attacker",
    "skill": "pet_sig_water_maelstrom",
  },
  {
    "atk": 53,
    "hp": 420,
    "id": "pet_071",
    "rcv": 27,
    "role": "tank",
    "skill": "pet_sig_water_bulwark",
  },
  {
    "atk": 53,
    "hp": 185,
    "id": "pet_072",
    "rcv": 11,
    "role": "attacker",
    "skill": "pet_fire_multi_hit_r",
  },
  {
    "atk": 34,
    "hp": 190,
    "id": "pet_073",
    "rcv": 45,
    "role": "healer",
    "skill": "pet_fire_heal_r",
  },
  {
    "atk": 37,
    "hp": 290,
    "id": "pet_074",
    "rcv": 19,
    "role": "tank",
    "skill": "pet_fire_shield_r",
  },
  {
    "atk": 40,
    "hp": 210,
    "id": "pet_075",
    "rcv": 25,
    "role": "support",
    "skill": "pet_fire_convert_r",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_076",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_fire_team_nuke_sr",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_077",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_fire_gravity_sr",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_078",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_fire_dot_sr",
  },
  {
    "atk": 44,
    "hp": 348,
    "id": "pet_079",
    "rcv": 22,
    "role": "tank",
    "skill": "pet_fire_shield_sr",
  },
  {
    "atk": 44,
    "hp": 348,
    "id": "pet_080",
    "rcv": 22,
    "role": "tank",
    "skill": "pet_fire_delay_attack_sr",
  },
  {
    "atk": 40,
    "hp": 228,
    "id": "pet_081",
    "rcv": 54,
    "role": "healer",
    "skill": "pet_fire_heal_sr",
  },
  {
    "atk": 40,
    "hp": 228,
    "id": "pet_082",
    "rcv": 54,
    "role": "healer",
    "skill": "pet_fire_extra_time_sr",
  },
  {
    "atk": 48,
    "hp": 252,
    "id": "pet_083",
    "rcv": 30,
    "role": "support",
    "skill": "pet_fire_damage_buff_sr",
  },
  {
    "atk": 58,
    "hp": 304,
    "id": "pet_084",
    "rcv": 36,
    "role": "support",
    "skill": "pet_sig_fire_warhymn",
  },
  {
    "atk": 58,
    "hp": 304,
    "id": "pet_085",
    "rcv": 36,
    "role": "support",
    "skill": "pet_sig_fire_emberflow",
  },
  {
    "atk": 53,
    "hp": 420,
    "id": "pet_086",
    "rcv": 27,
    "role": "tank",
    "skill": "pet_sig_fire_magmaward",
  },
  {
    "atk": 53,
    "hp": 185,
    "id": "pet_087",
    "rcv": 11,
    "role": "attacker",
    "skill": "pet_earth_nuke_r",
  },
  {
    "atk": 53,
    "hp": 185,
    "id": "pet_088",
    "rcv": 11,
    "role": "attacker",
    "skill": "pet_earth_multi_hit_r",
  },
  {
    "atk": 34,
    "hp": 190,
    "id": "pet_089",
    "rcv": 45,
    "role": "healer",
    "skill": "pet_earth_heal_r",
  },
  {
    "atk": 40,
    "hp": 210,
    "id": "pet_090",
    "rcv": 25,
    "role": "support",
    "skill": "pet_earth_defense_break_r",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_091",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_earth_nuke_sr",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_092",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_earth_multi_hit_sr",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_093",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_earth_dot_sr",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_094",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_earth_team_nuke_sr",
  },
  {
    "atk": 63,
    "hp": 222,
    "id": "pet_095",
    "rcv": 13,
    "role": "attacker",
    "skill": "pet_earth_gravity_sr",
  },
  {
    "atk": 48,
    "hp": 252,
    "id": "pet_096",
    "rcv": 30,
    "role": "support",
    "skill": "pet_earth_damage_buff_sr",
  },
  {
    "atk": 48,
    "hp": 252,
    "id": "pet_097",
    "rcv": 30,
    "role": "support",
    "skill": "pet_earth_element_buff_sr",
  },
  {
    "atk": 40,
    "hp": 228,
    "id": "pet_098",
    "rcv": 54,
    "role": "healer",
    "skill": "pet_earth_heal_sr",
  },
  {
    "atk": 76,
    "hp": 268,
    "id": "pet_099",
    "rcv": 15,
    "role": "attacker",
    "skill": "pet_sig_earth_quake",
  },
  {
    "atk": 70,
    "hp": 367,
    "id": "pet_100",
    "rcv": 43,
    "role": "support",
    "skill": "pet_sig_earth_genesis",
  },
]
`;
